# particlesGL

./: CMakeLists.txt  GameLoop.cpp  GameLoop.h  main.cpp
common/: Shader.hpp  SlotMap.h  helperFuncs.cpp  helperFuncs.h  loadShader.cpp  point.h
common/CUDARuntime/: Particles.cu  Particles.cuh
shaders/: SimpleFragmentShader.glsl
